# cxon

./: .gitignore  Cargo.toml  README.md  cson.json  cxon.json
.github/workflows/: build_and_test.yml
example/hello_world/: cxon.json  func.cpp  main.cpp
example/hello_world/include/: func.hpp
example/shared_lib/: cxon.json
example/static_lib/: cxon.json  func.cpp
src/: build.rs  cson.rs  cxon.rs  main.rs
src/cli/: arg.rs
src/object/: output.rs  source.rs
src/toolchain/: compiler.rs  gnu.rs  linker.rs  llvm.rs  mod.rs  msvc.rs
src/utils/: mod.rs
test/project/: func.cpp
wix/: main.wxs
